--- a/projet3-3i005.ipynb
+++ b/projet3-3i005.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-20T14:34:13.083455Z",
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-20T14:34:12.727164Z",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-20T14:34:13.112738Z",
@@ -350,7 +350,7 @@
        "4   0     2       1  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-20T14:34:14.979903Z",
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-20T14:34:17.180286Z",
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-20T14:34:18.886098Z",
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-20T14:34:18.938632Z",
@@ -516,11 +516,11 @@
      "data": {
       "text/plain": [
        "{'estimation': 0.7453874538745388,\n",
-       " 'min5pourcent': 0.7070732167779186,\n",
-       " 'max5pourcent': 0.7802477730470401}"
+       " 'min5pourcent': 0.7087109975695709,\n",
+       " 'max5pourcent': 0.7820639101795066}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-11-11T16:18:32.781398Z",
@@ -548,11 +548,11 @@
      "data": {
       "text/plain": [
        "{'estimation': 0.69,\n",
-       " 'min5pourcent': 0.6228282243374195,\n",
-       " 'max5pourcent': 0.750010551639219}"
+       " 'min5pourcent': 0.62590170673099,\n",
+       " 'max5pourcent': 0.7540982932690099}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-20T14:34:18.954885Z",
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-20T14:34:19.066092Z",
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-20T14:34:19.096627Z",
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-20T14:34:19.125774Z",
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-20T14:34:19.158967Z",
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-20T14:34:19.183309Z",
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-20T14:34:19.220544Z",
@@ -914,12 +914,35 @@
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Estimation de la classe de l'individu 0 par MAP2DClasssifer) : 1\n",
-      "Estimation de la classe de l'individu 1 par MAP2DClasssifer) : 1\n",
-      "Estimation de la classe de l'individu 2 par MAP2DClasssifer) : 1\n"
+      "[autoreload of projet failed: Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\Sarac\\PycharmProjects\\projet3-3i005\\venv\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 276, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"c:\\Users\\Sarac\\PycharmProjects\\projet3-3i005\\venv\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 475, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"C:\\Users\\Sarac\\AppData\\Local\\Programs\\Python\\Python310\\lib\\importlib\\__init__.py\", line 169, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 619, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 883, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 241, in _call_with_frames_removed\n",
+      "  File \"c:\\Users\\Sarac\\PycharmProjects\\projet3-3i005\\projet.py\", line 304, in <module>\n",
+      "    classifier = ML2DClassifier(train_data, target_column=\"target\")\n",
+      "NameError: name 'train_data' is not defined\n",
+      "]\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'index'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[20], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m cl\u001b[38;5;241m=\u001b[39mprojet\u001b[38;5;241m.\u001b[39mML2DClassifier(train,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mthal\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;66;03m# cette ligne appelle projet.P2Dp(train,\"thal\")\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m]:\n\u001b[1;32m----> 3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEstimation de la classe de l\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mindividu \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m par MAP2DClasssifer) : \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(i,\u001b[43mcl\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mestimClass\u001b[49m\u001b[43m(\u001b[49m\u001b[43mutils\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetNthDict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain\u001b[49m\u001b[43m,\u001b[49m\u001b[43mi\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m)) \n",
+      "File \u001b[1;32mc:\\Users\\Sarac\\PycharmProjects\\projet3-3i005\\projet.py:260\u001b[0m, in \u001b[0;36mML2DClassifier.estimClass\u001b[1;34m(self, individual)\u001b[0m\n\u001b[0;32m    257\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m target \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mP2D[\u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mP2D\u001b[38;5;241m.\u001b[39mkeys())[\u001b[38;5;241m0\u001b[39m]]\u001b[38;5;241m.\u001b[39mkeys():\n\u001b[0;32m    258\u001b[0m     prob \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m  \u001b[38;5;66;03m# Inicia con probabilidad uniforme\u001b[39;00m\n\u001b[1;32m--> 260\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m feature \u001b[38;5;129;01min\u001b[39;00m \u001b[43mindividual\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m:\n\u001b[0;32m    261\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m feature \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mP2D \u001b[38;5;129;01mand\u001b[39;00m individual[feature] \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mP2D[feature][target]:\n\u001b[0;32m    262\u001b[0m             prob \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mP2D[feature][target][individual[feature]]\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'dict' object has no attribute 'index'"
      ]
     }
    ],
