--- a/projet3-3i005.ipynb
+++ b/projet3-3i005.ipynb
@@ -1304,7 +1304,7 @@
     }
    ],
    "source": [
-    "utils.drawGraphHorizontal(\"A->B;A->C;A->D;A->E;B->A;B->C;B->D;B->E;C->A;C->B;C->D;C->E;D->A;D->B;D->C;D->E;E->A;E->B;E->C;E->D\")"
+    "utils.drawGraph(\"B->A;C->A;D->A;E->A;A->B;A->C;A->D;A->E;B->C;B->D;B->E;C->D;C->E;D->E\")\n"
    ]
   },
   {
